--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&family=Roboto+Condensed:wght@300;400;700&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 100%;
+  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.flex-center {
+  display: flex;
+  align-items: center;
+}
+.justify-center {
+  justify-content: center;
+}
+.flex-direction-column {
+  flex-direction: column;
+}
+li {
+  list-style: none;
+}
+.btn-primary-first {
+  background-color: var(--primary-color);
+  width: 11rem;
+}
+.btn-primary-first:hover {
+  border: 1px solid;
+  background-color: var(--secondary-color);
+  color: var(--primary-color-dark);
+  font-weight: bold;
+  cursor: pointer;
+}
+
+:root {
+  --primary-color: #3d6d79;
+  --secondary-color: #d69d66;
+  --gray-color: #e0e2ee;
+  --golden-color: #d49b4a;
+  --light-teal: #99a98f;
+  --primary-color-dark: #175c6d;
 }
