feat:adding addnote page to note taking app

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,400&family=Roboto+Condensed:wght@300;400;700&display=swap");
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 100%;
@@ -31,7 +28,7 @@ li {
 }
 .btn-primary-first {
   background-color: var(--primary-color);
-  width: 11rem;
+  cursor: pointer;
 }
 .btn-primary-first:hover {
   border: 1px solid;
