feat:added sample notes with delete and archive pages

--- a/src/Component/Sidebar/Sidebar.css
+++ b/src/Component/Sidebar/Sidebar.css
@@ -15,7 +15,7 @@
   font-weight: 300;
   padding: 11px;
   margin: 10px;
-  margin-left: 0;
+  margin-left: 1rem;
   width: 17rem;
   text-align: left;
 }
@@ -49,8 +49,10 @@
   .sidebar-item-container {
     /* flex-basis: 100%; */
     width: 100%;
-    margin: 25rem 0 0;
+    height: 18vh;
+    margin: 85rem 0 0 2rem;
     flex-direction: row;
+    background-color: aqua;
   }
   .sidebar-item-with-icon {
     width: 7rem;
