--- a/src/Component/NoteListpage/NoteListpage.css
+++ b/src/Component/NoteListpage/NoteListpage.css
@@ -1,7 +1,7 @@
 .search-input-center {
   width: 30%;
   height: 4rem;
-  margin: 3rem 0 0 20rem;
+  margin: 11rem 0 0 20rem;
   border: 2px solid var(--light-stone);
 }
 .search-icon {
@@ -19,8 +19,8 @@
   width: 100%;
   height: 100vh;
   margin: 8rem 0 0 20rem;
-  position: fixed;
-  top: 2.6rem;
+  /* position: fixed;
+  top: 2.6rem; */
 }
 .add-notes-container {
   width: 58rem;
@@ -63,12 +63,12 @@
     margin-left: 0;
   }
   .search-input-center {
-    width: 90%;
-    margin-left: 1rem;
+    width: 70%;
+    margin: 5rem 0 0 3rem;
   }
   .add-notes-container {
-    width: 80%;
+    width: 70%;
     height: 20rem;
-    margin-left: 3rem;
+    margin-left: 1rem;
   }
 }
