--- a/src/Component/colorPalette/colorPalette.css
+++ b/src/Component/colorPalette/colorPalette.css
@@ -26,7 +26,7 @@
     top: 39rem;
     left: 8.6rem;
     z-index: 120;
-    height: 7.6rem;
+    height: auto;
     width: 14rem;
     padding: 4px;
   }
