--- a/src/Component/NoteCard/NoteCard.css
+++ b/src/Component/NoteCard/NoteCard.css
@@ -13,7 +13,8 @@
   font-weight: bold;
 }
 
-.tag-of-card {
+.tag-of-card,
+.priority-of-card {
   font-size: 1.3rem;
   align-self: flex-start;
   margin-left: 2rem;
