--- a/src/Component/NoteListpage/NoteListpage.css
+++ b/src/Component/NoteListpage/NoteListpage.css
@@ -37,7 +37,7 @@
   width: 100%;
   padding: 6px;
   font-size: 1.5rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Arial, Helvetica, sans-serif";
 }
 .note-icon {
   color: var(--primary-color-dark);
@@ -46,7 +46,7 @@
   width: 100%;
   height: 10rem;
   font-size: 1.5rem;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Arial, Helvetica, sans-serif";
 }
 .close-icon-color-palatte-container {
   justify-content: flex-end;
@@ -59,8 +59,15 @@
   width: 100%;
   justify-content: space-between;
 }
-.tag {
+.tag,
+.priority {
   height: 30px;
+}
+.label-container,
+.priorityioption-container {
+  align-self: center;
+  gap: 1rem;
+  margin-left: 7px;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
   .notes-with-searchbar-container {
