feat:added toggle button to change theme

--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -6,6 +6,18 @@
   right: 0;
   background-color: white;
   border-bottom: 2px solid var(--light-teal);
+  justify-content: space-between;
+}
+.Header-container-dark {
+  background-color: black;
+  color: var(-- --golden-color);
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  border-bottom: 2px solid var(--white-color);
+  justify-content: space-between;
 }
 .heading-in-note-page {
   font-size: 3rem;
@@ -13,13 +25,18 @@
   padding: 7px;
   margin: 3px;
 }
-
 .name-of-app {
   color: var(--primary-color);
 }
 .menu-icon {
   font-size: 2rem;
   display: none;
+}
+.theme-icon {
+  font-size: 2rem;
+  margin-right: 2rem;
+  color: var(--dark-cyan);
+  cursor: pointer;
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
   .Header-container {
