--- a/src/Component/NoteListpage/NoteListpage.css
+++ b/src/Component/NoteListpage/NoteListpage.css
@@ -14,8 +14,12 @@
   outline: none;
   width: 70%;
 }
+.input-searchbox-dark {
+  background-color: transparent;
+  color: white;
+}
 .notes-with-searchbar-container {
-  flex-basis: 80%;
+  flex-basis: 100%;
   width: 100%;
   height: 100vh;
   margin: 8rem 0 0 20rem;
@@ -28,6 +32,10 @@
   margin: 4rem 0 0 20rem;
   cursor: pointer;
 }
+.add-notes-container-dark {
+  background-color: var(--light-teal);
+  box-shadow: none;
+}
 .input-with-pin-icon-container {
   width: 100%;
   font-size: 2rem;
@@ -38,6 +46,12 @@
   padding: 6px;
   font-size: 1.5rem;
   font-family: "Arial, Helvetica, sans-serif";
+}
+.title-of-note-dark,
+.details-of-note-dark {
+  background-color: transparent;
+  color: var(--dark-blue);
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 .note-icon {
   color: var(--primary-color-dark);
@@ -54,6 +68,9 @@
   width: 100%;
   font-size: 2.4rem;
   color: var(--primary-color-dark);
+}
+.icons-theme-dark {
+  color: var(--white-color);
 }
 .label-with-icons-container {
   width: 100%;
