--- a/src/pages/ArchivePage/Archivepage.css
+++ b/src/pages/ArchivePage/Archivepage.css
@@ -3,6 +3,9 @@
   width: 100%;
   gap: 1rem;
 }
+.Archivenote-page-container-dark {
+  background-color: black;
+}
 .archive-heading-note-container {
   width: 100%;
   height: auto;
