doc: changing the homepage image and changing the shade of black
as one reviwer said that the background is too dark in dark theme that's why changing the black color

--- a/src/Component/Sidebar/Sidebar.css
+++ b/src/Component/Sidebar/Sidebar.css
@@ -11,7 +11,7 @@
   overflow-y: scroll;
 }
 .sidebar-item-container-dark {
-  background-color: black;
+  background-color: #202020;
 }
 .sidebar-item-with-icon {
   gap: 2rem;
