--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -9,7 +9,7 @@
   justify-content: space-between;
 }
 .Header-container-dark {
-  background-color: black;
+  background-color: #202020;
   color: var(-- --golden-color);
   width: 100%;
   position: fixed;
