--- a/src/pages/AddNotepage/Notepage.css
+++ b/src/pages/AddNotepage/Notepage.css
@@ -4,7 +4,7 @@
 }
 .note-page-container {
   width: 100%;
-  margin-left: 1rem;
+  /* margin-left: 1rem; */
 }
 .notelist-container {
   width: 100%;
