--- a/src/pages/ArchivePage/Archivepage.css
+++ b/src/pages/ArchivePage/Archivepage.css
@@ -4,7 +4,7 @@
   gap: 1rem;
 }
 .Archivenote-page-container-dark {
-  background-color: black;
+  background-color: #202020;
 }
 .archive-heading-note-container {
   width: 100%;
