--- a/src/Component/NoteCard/NoteCard.css
+++ b/src/Component/NoteCard/NoteCard.css
@@ -51,4 +51,7 @@
   color: var(--dark-stone);
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
+  .notecard-container {
+    width: 30rem;
+  }
 }
