--- a/src/Component/Sidebar/Sidebar.css
+++ b/src/Component/Sidebar/Sidebar.css
@@ -58,17 +58,20 @@
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
   .sidebar-item-container {
-    width: 80%;
+    width: 100%;
     height: 18vh;
-    margin: 85rem 0 0 -7rem;
+    margin: 68rem 0 0 -7rem;
     flex-direction: row;
     background-color: aqua;
   }
   .sidebar-item-with-icon {
     width: 5rem;
-    display: flex;
+    display: none;
     flex-direction: column;
     gap: 1px;
+  }
+  .input-with-icon {
+    display: none;
   }
   .sidebar-items {
     display: flex;
