--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -46,12 +46,11 @@
   }
   .menu-icon {
     display: block;
-    margin-left: 5px;
   }
   .heading-in-note-page {
     padding: 0px 4px;
     font-size: 2.7rem;
-    margin: 0px 9px;
+    margin: auto;
   }
   .theme-icon {
     margin-right: 2rem;
