feat:adding rich text editor

--- a/src/Component/FilterBox/FilterBar.css
+++ b/src/Component/FilterBox/FilterBar.css
@@ -47,6 +47,7 @@ input {
     display: flex;
     flex-direction: row;
     margin-left: 12rem;
+    /* display: none; */
   }
   .filter-and-clear-filter-container {
     width: 100%;
