--- a/src/Component/NoteListpage/NoteListpage.css
+++ b/src/Component/NoteListpage/NoteListpage.css
@@ -31,6 +31,7 @@
   box-shadow: 2px 3px 4px var(--light-stone);
   margin: 4rem 0 0 20rem;
   cursor: pointer;
+  height: auto;
 }
 .add-notes-container-dark {
   background-color: var(--light-teal);
@@ -45,7 +46,7 @@
   width: 100%;
   padding: 6px;
   font-size: 1.5rem;
-  font-family: "Arial, Helvetica, sans-serif";
+  font-family: Georgia, " Times New Roman ", Times, serif;
 }
 .title-of-note-dark,
 .details-of-note-dark {
@@ -70,7 +71,7 @@
   color: var(--primary-color-dark);
 }
 .icons-theme-dark {
-  color: var(--white-color);
+  color: var(--primary-color-dark);
 }
 .label-with-icons-container {
   width: 100%;
@@ -79,25 +80,46 @@
 .tag,
 .priority {
   height: 30px;
+  cursor: pointer;
 }
 .label-container,
-.priorityioption-container {
+.priorityioption-container,
+.label-add-container {
   align-self: center;
   gap: 1rem;
   margin-left: 7px;
 }
-@media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
+.editor-quill {
+  width: 100%;
+  font-size: 2rem;
+  cursor: pointer;
+  gap: 5px;
+}
+.editor-quill .editor-of-note {
+  width: 100%;
+  border: 1px solid var(--primary-color-dark);
+}
+.label-input {
+  width: 8rem;
+  height: 30px;
+}
+@media only screen and (min-width: 320px) and (max-width: 880px) {
   .notes-with-searchbar-container {
-    height: 50%;
+    height: auto;
+    flex-basis: 0.8;
     margin-left: 0;
   }
   .search-input-center {
-    width: 80%;
+    width: 90%;
     margin: 5rem 0 0 2.5rem;
   }
   .add-notes-container {
-    width: 97%;
-    height: 20rem;
-    margin-left: 1rem;
+    width: 100%;
+    height: auto;
+    margin-left: 2rem;
+  }
+  .label-with-icons-container {
+    flex-wrap: wrap;
+    gap: 10px;
   }
 }
