Revert "feat:adding rich text editor"
This reverts commit c6817d1b229912651f8aad35c7981a927f3f5d4e.

--- a/src/Component/Hamburger/Hamburger.css
+++ b/src/Component/Hamburger/Hamburger.css
@@ -14,7 +14,7 @@
   display: none;
 }
 .hamburger-menu-item {
-  color: var(--light-teal);
+  color: var(--primary-color);
   display: flex;
   flex-direction: column;
   text-align: left;
