--- a/src/Component/Navbar/Navbar.css
+++ b/src/Component/Navbar/Navbar.css
@@ -5,9 +5,8 @@
   left: 0;
   right: 0;
   background-color: white;
-  /* border-bottom: 2px solid var(--light-teal); */
+  border-bottom: 2px solid var(--light-teal);
   justify-content: space-between;
-  z-index: 90;
 }
 .Header-container-dark {
   background-color: #202020;
@@ -23,7 +22,8 @@
 .heading-in-note-page {
   font-size: 3rem;
   color: var(--secondary-color);
-  padding: 4px;
+  padding: 7px;
+  margin: 3px;
 }
 .name-of-app {
   color: var(--primary-color);
@@ -34,24 +34,23 @@
 }
 .theme-icon {
   font-size: 2rem;
-  margin-right: 1rem;
+  margin-right: 2rem;
   color: var(--dark-cyan);
   cursor: pointer;
 }
-@media only screen and (min-device-width: 320px) and (max-device-width: 880px) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
   .Header-container {
     width: 100%;
     padding: 4px;
     justify-content: space-between;
-    /* border: none; */
   }
   .menu-icon {
-    display: flex;
-    /* margin-right: auto; */
-    justify-self: flex-start;
+    display: block;
   }
   .heading-in-note-page {
+    padding: 0px 4px;
     font-size: 2.7rem;
+    margin: auto;
   }
   .theme-icon {
     margin-right: 2rem;
