--- a/src/Component/NoteListpage/NoteListpage.css
+++ b/src/Component/NoteListpage/NoteListpage.css
@@ -31,6 +31,7 @@
   box-shadow: 2px 3px 4px var(--light-stone);
   margin: 4rem 0 0 20rem;
   cursor: pointer;
+  height: auto;
 }
 .add-notes-container-dark {
   background-color: var(--light-teal);
@@ -70,7 +71,7 @@
   color: var(--primary-color-dark);
 }
 .icons-theme-dark {
-  color: var(--white-color);
+  color: var(--primary-color-dark);
 }
 .label-with-icons-container {
   width: 100%;
@@ -79,6 +80,10 @@
 .tag,
 .priority {
   height: 30px;
+  cursor: pointer;
+}
+.label-add {
+  margin-left: 4px;
 }
 .label-container,
 .priorityioption-container {
@@ -86,18 +91,40 @@
   gap: 1rem;
   margin-left: 7px;
 }
+.editor-quill {
+  width: 100%;
+  font-size: 2rem;
+  cursor: pointer;
+  gap: 5px;
+}
+.editor-quill .editor-of-note {
+  width: 100%;
+  border: 1px solid var(--primary-color-dark);
+}
+.label-input {
+  width: 8rem;
+  height: 30px;
+}
 @media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
   .notes-with-searchbar-container {
-    height: 50%;
     margin-left: 0;
+    height: auto;
+    flex-basis: 0.8;
   }
   .search-input-center {
-    width: 80%;
+    width: 90%;
     margin: 5rem 0 0 2.5rem;
   }
   .add-notes-container {
-    width: 97%;
-    height: 20rem;
+    width: 100%;
+    height: auto;
     margin-left: 1rem;
+  }
+  .label-with-icons-container {
+    flex-wrap: wrap;
+    gap: 10px;
+    /* width: 97%;
+    height: 20rem;
+    margin-left: 1rem; */
   }
 }
