--- a/src/Component/FilterBox/FilterBar.css
+++ b/src/Component/FilterBox/FilterBar.css
@@ -43,7 +43,7 @@ input {
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
   .filterbar-conatiner {
-    width: 100%;
+    width: 100vw;
     display: flex;
     flex-direction: row;
     margin-left: 12rem;
