--- a/src/pages/AddNotepage/Notepage.css
+++ b/src/pages/AddNotepage/Notepage.css
@@ -3,11 +3,10 @@
   height: 56rem;
 }
 .note-page-container {
-  width: 100%;
-  /* margin-left: 1rem; */
+  max-width: 100vw;
 }
 .notelist-container {
-  width: 100%;
+  width: inherit;
   gap: 10px;
   margin-left: 2.5rem;
   flex-wrap: wrap;
@@ -19,16 +18,15 @@
 }
 .title-notelist-container,
 .title-pinned-notelist-container {
-  width: 100%;
+  max-width: inherit;
+  width: 80%;
   height: auto;
   gap: 12px;
-  margin: -2rem 0 0 44rem;
-  /* margin: -2rem 0 0 20rem; */
+  margin: -2rem 0 0 22rem;
   justify-content: flex-start;
 }
 .title-pinned-notelist-container {
-  /* margin: 3rem 0 1rem 20rem; */
-  margin: 3rem 0 1rem 44rem;
+  margin: 3rem 0 1rem 22rem;
 }
 .heading-others,
 .heading-Pinned {
