refactor: refactor code by reducing the state for editor

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ li {
   --primary-color: #3d6d79;
   --secondary-color: #d69d66;
   --gray-color: #e0e2ee;
-  --golden-color: #d49b4a;
+  --golden-color: #e7992c;
   --light-teal: #99a98f;
   --primary-color-dark: #175c6d;
 }
