--- a/src/pages/DeletedNotePage/DeletedNotepage.css
+++ b/src/pages/DeletedNotePage/DeletedNotepage.css
@@ -18,6 +18,10 @@
   gap: 2rem;
   justify-content: flex-start;
 }
+.heading-dark {
+  color: var(--secondary-color);
+}
+
 @media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
   .Deletenotes-container {
     flex-direction: column;
