--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -42,6 +42,9 @@
   width: 100%;
   justify-content: center;
 }
+.quote-dark {
+  color: var(--secondary-color);
+}
 @media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
   body {
     font-size: 90%;
