--- a/src/Component/Footer/Footer.css
+++ b/src/Component/Footer/Footer.css
@@ -12,8 +12,12 @@
   font-size: medium;
   color: var(--primary-color);
 }
+
 .nav-icon {
   color: var(--primary-color);
+}
+.nav-icon-dark {
+  color: var(--secondary-color);
 }
 @media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
   .footer {
