--- a/src/Component/Sidebar/Sidebar.css
+++ b/src/Component/Sidebar/Sidebar.css
@@ -12,14 +12,14 @@
 }
 .sidebar-item-container-dark {
   background-color: #202020;
+  color: white;
 }
 .sidebar-item-with-icon {
   gap: 2rem;
   font-size: 2rem;
   font-weight: 300;
   padding: 8px;
-  margin: 9px;
-  margin-left: 1.6rem;
+  margin: 9px 0 9px 1.6rem;
   width: 17rem;
   text-align: left;
 }
