--- a/src/pages/ArchivePage/Archivepage.css
+++ b/src/pages/ArchivePage/Archivepage.css
@@ -21,6 +21,9 @@
   gap: 2rem;
   justify-content: flex-start;
 }
+.heading-dark {
+  color: var(--secondary-color);
+}
 @media only screen and (min-device-width: 320px) and (max-device-width: 880px) and (-webkit-min-device-pixel-ratio: 2) {
   .archivenotes-container {
     flex-direction: column;
