--- a/src/pages/AddNotepage/Notepage.css
+++ b/src/pages/AddNotepage/Notepage.css
@@ -33,6 +33,7 @@
   width: 100%;
   margin: 2rem 0 0 2rem;
   color: var(--primary-color);
+  font-size: 1.8rem;
 }
 .heading-dark {
   color: var(--secondary-color);
