--- a/src/Component/Hamburger/Hamburger.css
+++ b/src/Component/Hamburger/Hamburger.css
@@ -2,11 +2,11 @@
   padding: 1rem;
   position: fixed;
   z-index: 200;
-  top: 8.7rem;
+  top: 7.5rem;
   left: 0;
   list-style: none;
   background-color: var(--white-color);
-  width: 30%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   transform: 0.3s ease-in-out;
@@ -14,12 +14,13 @@
   display: none;
 }
 .hamburger-menu-item {
-  color: var(--light-teal);
+  color: var(--dark-teal);
   display: flex;
   flex-direction: column;
   text-align: left;
   margin-bottom: 1.5rem;
   font-weight: bold;
+  font-size: 1.5rem;
 }
 .hamburger-menu-item:hover {
   cursor: pointer;
