--- a/src/pages/AddNotepage/Notepage.css
+++ b/src/pages/AddNotepage/Notepage.css
@@ -1,12 +1,13 @@
 .sidebar-and-notes-container {
   width: 100vw;
   height: 56rem;
+  min-height: 100vh;
 }
 .note-page-container {
   max-width: 100vw;
 }
 .notelist-container {
-  width: inherit;
+  width: 100%;
   gap: 10px;
   margin-left: 2.5rem;
   flex-wrap: wrap;
@@ -47,10 +48,23 @@
     overflow-y: scroll;
   }
   .notelist-container {
-    margin: 2rem 0 0 -19rem;
+    margin: 2rem 0 0 3rem;
+    width: 100vw;
   }
   .heading-others,
   .heading-Pinned {
     margin-left: 3rem;
+  }
+  .title-notelist-container,
+  .title-pinned-notelist-container {
+    margin-left: 0rem;
+    width: 100vw;
+    height: 80vh;
+  }
+  .title-notelist-container {
+    margin-top: -9rem;
+  }
+  .title-pinned-notelist-container {
+    margin-top: 29rem;
   }
 }
